# Weightlifting-App

./: CMakeLists.txt  main.cpp
